--- a/src/main/resources/com/cyt/os/css/style.css
+++ b/src/main/resources/com/cyt/os/css/style.css
@@ -5,6 +5,20 @@
 /*.default-color6.chart-pie { -fx-pie-color: #2b73f7; }*/
 /*.default-color7.chart-pie { -fx-pie-color: #9760f1; }*/
 
+.box {
+    -fx-border-color: rgb(162, 162, 162);
+    -fx-border-radius: 5px;
+    -fx-background-radius: 5px;
+    -fx-padding: 5 5 5 5;
+}
+.CPU-box {
+    -fx-border-color: rgb(162, 162, 162);
+    -fx-border-radius: 5px;
+    -fx-background-radius: 5px;
+    -fx-padding: 5 5 5 5;
+    -fx-background-color: #ffdd40;
+
+}
 
 .table-column {
     -fx-alignment: center;
